switch root element to % to avoid overscroll on mobile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,6 +6,10 @@
 	box-sizing: border-box;
 }
 
+html, body{
+	height: 100%;
+}
+
 body, input, textarea{
 	font-family: 'Overpass', sans-serif;
 	font-weight: 300;
@@ -25,7 +29,7 @@ input::placeholder, textarea::placeholder{
 #root{
 	display: flex;
 	justify-content: center;
-	height: 100vh;
+	height: 100%;
 }
 
 nav{
